Models changes, new routes, user login/data loading

--- a/Delator/src/locales/en.json
+++ b/Delator/src/locales/en.json
@@ -15,5 +15,10 @@
     "position": "Position",
     "photo": "Photo",
     "clean": "Clean",
-    "save": "Save"
+    "save": "Save",
+    "your-account": "Your account",
+    "manage": "Manage",
+    "report-v": "Report",
+    "main": "Main",
+    "others": "Others"
 }
